avoid instantiating Boolean objects, rather use the predefined values in java.lang.Boolean